--- a/JavaScript.html
+++ b/JavaScript.html
@@ -4,44 +4,49 @@
     <meta charset="utf-8">
     <title>Webの勉強-JavaScript</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-164626172-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164626172-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'UA-164626172-1');
-</script>
-
+      gtag('config', 'UA-164626172-1');
+    </script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="index.html">WEB</a></h1>
-    <ol>
-      <li><a href="HTML.html">HTML</a></li>
-      <li><a href="CSS.html">CSS</a></li>
-      <li><a href="JavaScript.html">JavaScript</a></li>
-    </ol>
-    <h2>HTML用語</h2>
-    <p><ul>
-      <li><strong>!DOCTYPE html & html</strong> : 基本</li>
-      <li><strong>head</strong> : ページの頭</li>
-      utf-8の設定及びタイトル(ホームページの名前)を指定する。<br>
-      例）meta charset="utf-8"<br>
-      <li><strong>body</strong> : ページの中身</li>
-      <ul type="square">
-        <li><strong>h1~h6</strong> : 文字の大きさ及び太さ(ページ内のタイトル)</li>
-        <li><strong>ol(Ordered List) & li(List Item)</strong> : 例)1,2,3,4...番号を付ける</li>
-        <li><strong>ul(UnOrdered List) & li(List Item)</strong> : 例)■,□,○,●を付ける</li>
-          例）■　＝　ul type="square"<br>
-          例）●　＝　ul type="circle"<br>
-        <li><strong>img</strong> : イメージを追加</li>
-          例）img src="イメージのファイル名" width="○○px OR ○○％"<br>
-        <li><strong>a(anchor)</strong> : リンク</li>
-        　例）a href="ネット住所" target:"_blank" title="タイトル"<br>
-            →target:"_blank" : 新しいブラウザで実行（省略可）<br>
-            →title="タイトル" : リンクにマウスを置いたら現れる物 <br>
-      </ul>
-    </ul></p>
+    <div id="grid">
+      <ol>
+        <li><a href="HTML.html">HTML</a></li>
+        <li><a href="CSS.html">CSS</a></li>
+        <li><a href="JavaScript.html"
+              style="color:red; text-decoration:underline;" >JavaScript</a></li>
+      </ol>
+      <div id="article">
+        <h2>JavaScript用語</h2>
+        <!--<p><ul>
+          <li><strong>!DOCTYPE html & html</strong> : 基本</li>
+          <li><strong>head</strong> : ページの頭</li>
+          utf-8の設定及びタイトル(ホームページの名前)を指定する。<br>
+          例）meta charset="utf-8"<br>
+          <li><strong>body</strong> : ページの中身</li>
+          <ul type="square">
+            <li><strong>h1~h6</strong> : 文字の大きさ及び太さ(ページ内のタイトル)</li>
+            <li><strong>ol(Ordered List) & li(List Item)</strong> : 例)1,2,3,4...番号を付ける</li>
+            <li><strong>ul(UnOrdered List) & li(List Item)</strong> : 例)■,□,○,●を付ける</li>
+              例）■　＝　ul type="square"<br>
+              例）●　＝　ul type="circle"<br>
+            <li><strong>img</strong> : イメージを追加</li>
+              例）img src="イメージのファイル名" width="○○px OR ○○％"<br>
+            <li><strong>a(anchor)</strong> : リンク</li>
+            　例）a href="ネット住所" target:"_blank" title="タイトル"<br>
+                →target:"_blank" : 新しいブラウザで実行（省略可）<br>
+                →title="タイトル" : リンクにマウスを置いたら現れる物 <br>
+          </ul>
+        </ul></p>-->
+        </div>
+        </div>
     <p>
       <div id="disqus_thread"></div>
       <script>
