--- a/CSS.html
+++ b/CSS.html
@@ -28,7 +28,7 @@
         <p><ul>
             <li><strong>書き方</strong></li>
               → headのところ ＜style＞a{  }＜/style＞<br>
-              <img src="CSSimg.jpg" alt="CSS用語の英語" width="300px;"> 　
+              <img src="cssimg.jpg" alt="CSS用語の英語" width="300px;"> 　
             <li><strong>color</strong> : 文字の色</li>
             例）headのところ : ＜style＞a{<strong>color:black;</strong>}＜/style＞<br>
             例）bodyのところ : ＜a style=<strong>"color:red";</strong>＞<br>
